--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -2,28 +2,122 @@
 
 =head1 NAME
 
-perldelta - what is new for perl v5.33.5
+[ this is a template for a new perldelta file.  Any text flagged as XXX needs
+to be processed before release. ]
+
+perldelta - what is new for perl v5.33.6
 
 =head1 DESCRIPTION
 
-This document describes differences between the 5.33.4 release and the 5.33.5
+This document describes differences between the 5.33.5 release and the 5.33.6
 release.
 
-If you are upgrading from an earlier release such as 5.33.3, first read
-L<perl5334delta>, which describes differences between 5.33.3 and 5.33.4.
+If you are upgrading from an earlier release such as 5.33.4, first read
+L<perl5335delta>, which describes differences between 5.33.4 and 5.33.5.
+
+=head1 Notice
+
+XXX Any important notices here
 
 =head1 Core Enhancements
 
-=head2 New octal syntax C<0oI<ddddd>>
+XXX New core language features go here.  Summarize user-visible core language
+enhancements.  Particularly prominent performance optimisations could go
+here, but most should go in the L</Performance Enhancements> section.
 
-It is now possible to specify octal literals with C<0o> prefixes,
-as in C<0o123_456>, parallel to the existing construct to specify
-hexadecimal literal C<0xI<ddddd>> and binary literal C<0bI<ddddd>>.
-Also, the builtin C<oct()> function now accepts this new syntax.
+[ List each enhancement as a =head2 entry ]
 
-See L<perldata/Scalar value constructors> and L<perlfunc/oct EXPR>.
+=head1 Security
+
+XXX Any security-related notices go here.  In particular, any security
+vulnerabilities closed should be noted here rather than in the
+L</Selected Bug Fixes> section.
+
+[ List each security issue as a =head2 entry ]
+
+=head1 Incompatible Changes
+
+XXX For a release on a stable branch, this section aspires to be:
+
+    There are no changes intentionally incompatible with 5.XXX.XXX
+    If any exist, they are bugs, and we request that you submit a
+    report.  See L</Reporting Bugs> below.
+
+[ List each incompatible change as a =head2 entry ]
+
+=head1 Deprecations
+
+XXX Any deprecated features, syntax, modules etc. should be listed here.
+
+=head2 Module removals
+
+XXX Remove this section if not applicable.
+
+The following modules will be removed from the core distribution in a
+future release, and will at that time need to be installed from CPAN.
+Distributions on CPAN which require these modules will need to list them as
+prerequisites.
+
+The core versions of these modules will now issue C<"deprecated">-category
+warnings to alert you to this fact.  To silence these deprecation warnings,
+install the modules in question from CPAN.
+
+Note that these are (with rare exceptions) fine modules that you are encouraged
+to continue to use.  Their disinclusion from core primarily hinges on their
+necessity to bootstrapping a fully functional, CPAN-capable Perl installation,
+not usually on concerns over their design.
+
+=over
+
+=item XXX
+
+XXX Note that deprecated modules should be listed here even if they are listed
+as an updated module in the L</Modules and Pragmata> section.
+
+=back
+
+[ List each other deprecation as a =head2 entry ]
+
+=head1 Performance Enhancements
+
+XXX Changes which enhance performance without changing behaviour go here.
+There may well be none in a stable release.
+
+[ List each enhancement as an =item entry ]
+
+=over 4
+
+=item *
+
+XXX
+
+=back
 
 =head1 Modules and Pragmata
+
+XXX All changes to installed files in F<cpan/>, F<dist/>, F<ext/> and F<lib/>
+go here.  If Module::CoreList is updated, generate an initial draft of the
+following sections using F<Porting/corelist-perldelta.pl>.  A paragraph summary
+for important changes should then be added by hand.  In an ideal world,
+dual-life modules would have a F<Changes> file that could be cribbed.
+
+The list of new and updated modules is modified automatically as part of
+preparing a Perl release, so the only reason to manually add entries here is if
+you're summarising the important changes in the module update. (Also, if the
+manually-added details don't match the automatically-generated ones, the
+release manager will have to investigate the situation carefully.)
+
+[ Within each section, list entries as an =item entry ]
+
+=head2 New Modules and Pragmata
+
+=over 4
+
+=item *
+
+XXX Remove this section if not applicable.
+
+=back
 
 =head2 Updated Modules and Pragmata
 
@@ -31,94 +125,34 @@ See L<perldata/Scalar value constructors> and L<perlfunc/oct EXPR>.
 
 =item *
 
-L<Carp> has been upgraded from version 1.50 to 1.51.
+L<XXX> has been upgraded from version A.xx to B.yy.
+
+If there was something important to note about this change, include that here.
+
+=back
+
+=head2 Removed Modules and Pragmata
+
+=over 4
 
 =item *
 
-L<Config::Perl::V> has been upgraded from version 0.32 to 0.33.
-
-=item *
-
-L<DynaLoader> has been upgraded from version 1.48 to 1.49.
-
-=item *
-
-L<Encode> has been upgraded from version 3.07 to 3.08.
-
-=item *
-
-L<ExtUtils::Install> has been upgraded from version 2.18 to 2.20.
-
-=item *
-
-L<ExtUtils::ParseXS> has been upgraded from version 3.41 to 3.42.
-
-=item *
-
-L<File::Copy> has been upgraded from version 2.34 to 2.35.
-
-=item *
-
-L<File::Find> has been upgraded from version 1.37 to 1.38.
-
-=item *
-
-L<File::Spec> has been upgraded from version 3.79 to 3.80.
-
-=item *
-
-The libnet distribution has been upgraded from version 3.11 to 3.12.
-
-=item *
-
-L<Module::CoreList> has been upgraded from version 5.20201120 to 5.20201220.
-
-=item *
-
-L<ODBM_File> has been upgraded from version 1.16 to 1.17.
-
-=item *
-
-L<Opcode> has been upgraded from version 1.48 to 1.49.
-
-=item *
-
-L<PerlIO::via::QuotedPrint> has been upgraded from version 0.08 to 0.09.
-
-=item *
-
-L<POSIX> has been upgraded from version 1.95 to 1.96.
-
-=item *
-
-L<Test::Harness> has been upgraded from version 3.42 to 3.43.
-
-=item *
-
-L<Text::Balanced> has been upgraded from version 2.03 to 2.04.
-
-=item *
-
-L<Time::HiRes> has been upgraded from version 1.9765 to 1.9766.
-
-=item *
-
-L<warnings> has been upgraded from version 1.48 to 1.49.
-
-=item *
-
-L<XS::APItest> has been upgraded from version 1.13 to 1.14.
+XXX
 
 =back
 
 =head1 Documentation
 
+XXX Changes to files in F<pod/> go here.  Consider grouping entries by
+file and be sure to link to the appropriate page, e.g. L<perlfunc>.
+
 =head2 New Documentation
 
-=head3 L<perldocstyle> has been added to F<pod/>.
+XXX Changes which create B<new> files in F<pod/> go here.
 
-This document is a guide for the authorship and maintenance of the
-documentation that ships with Perl.
+=head3 L<XXX>
+
+XXX Description of the purpose of the new file here
 
 =head2 Changes to Existing Documentation
 
@@ -126,182 +160,250 @@ We have attempted to update the documentation to reflect the changes
 listed in this document.  If you find any we have missed, open an issue
 at L<https://github.com/Perl/perl5/issues>.
 
+XXX Changes which significantly change existing files in F<pod/> go here.
+However, any changes to F<pod/perldiag.pod> should go in the L</Diagnostics>
+section.
+
 Additionally, the following selected changes have been made:
 
-=head3 L<perlfunc>
+=head3 L<XXX>
 
 =over 4
 
 =item *
 
-L<msgsnd()|perlfunc/msgsnd> documented a length field included in the
-packed C<MSG> parameter to msgsnd(), but there was no such field.
-C<MSG> contains only the type and the message content.
+XXX Description of the change here
+
+=back
+
+=head1 Diagnostics
+
+The following additions or changes have been made to diagnostic output,
+including warnings and fatal error messages.  For the complete list of
+diagnostic messages, see L<perldiag>.
+
+XXX New or changed warnings emitted by the core's C<C> code go here.  Also
+include any changes in L<perldiag> that reconcile it to the C<C> code.
+
+=head2 New Diagnostics
+
+XXX Newly added diagnostic messages go under here, separated into New Errors
+and New Warnings
+
+=head3 New Errors
+
+=over 4
+
+=item *
+
+XXX L<message|perldiag/"message">
+
+=back
+
+=head3 New Warnings
+
+=over 4
+
+=item *
+
+XXX L<message|perldiag/"message">
+
+=back
+
+=head2 Changes to Existing Diagnostics
+
+XXX Changes (i.e. rewording) of diagnostic messages go here
+
+=over 4
+
+=item *
+
+XXX Describe change here
+
+=back
+
+=head1 Utility Changes
+
+XXX Changes to installed programs such as F<perldoc> and F<xsubpp> go here.
+Most of these are built within the directory F<utils>.
+
+[ List utility changes as a =head2 entry for each utility and =item
+entries for each change
+Use L<XXX> with program names to get proper documentation linking. ]
+
+=head2 L<XXX>
+
+=over 4
+
+=item *
+
+XXX
+
+=back
+
+=head1 Configuration and Compilation
+
+XXX Changes to F<Configure>, F<installperl>, F<installman>, and analogous tools
+go here.  Any other changes to the Perl build process should be listed here.
+However, any platform-specific changes should be listed in the
+L</Platform Support> section, instead.
+
+[ List changes as an =item entry ].
+
+=over 4
+
+=item *
+
+XXX
 
 =back
 
 =head1 Testing
 
+XXX Any significant changes to the testing of a freshly built perl should be
+listed here.  Changes which create B<new> files in F<t/> go here as do any
+large changes to the testing harness (e.g. when parallel testing was added).
+Changes to existing files in F<t/> aren't worth summarizing, although the bugs
+that they represent may be covered elsewhere.
+
+XXX If there were no significant test changes, say this:
+
+Tests were added and changed to reflect the other additions and changes
+in this release.
+
+XXX If instead there were significant changes, say this:
+
 Tests were added and changed to reflect the other additions and
 changes in this release.  Furthermore, these significant changes were
 made:
+
+[ List each test improvement as an =item entry ]
 
 =over 4
 
 =item *
 
-When testing in parallel on many-core platforms, you can now cause the
-test suite to finish somewhat earlier, but with less logical ordering of
-the tests, by setting
+XXX
 
- PERL_TEST_HARNESS_ASAP=1
+=back
 
-while running the test suite.
+=head1 Platform Support
+
+XXX Any changes to platform support should be listed in the sections below.
+
+[ Within the sections, list each platform as an =item entry with specific
+changes as paragraphs below it. ]
+
+=head2 New Platforms
+
+XXX List any platforms that this version of perl compiles on, that previous
+versions did not.  These will either be enabled by new files in the F<hints/>
+directories, or new subdirectories and F<README> files at the top level of the
+source tree.
+
+=over 4
+
+=item XXX-some-platform
+
+XXX
+
+=back
+
+=head2 Discontinued Platforms
+
+XXX List any platforms that this version of perl no longer compiles on.
+
+=over 4
+
+=item XXX-some-platform
+
+XXX
 
 =back
 
 =head2 Platform-Specific Notes
 
+XXX List any changes for specific platforms.  This could include configuration
+and compilation changes or changes in portability/compatibility.  However,
+changes within modules for platforms should generally be listed in the
+L</Modules and Pragmata> section.
+
 =over 4
 
-=item Windows
+=item XXX-some-platform
 
-Windows now supports L<symlink()|perlfunc/symlink> and
-L<readlink()|perlfunc/readlink>, and L<lstat()|perlfunc/lstat> is no
-longer an alias for L<stat()|perlfunc/stat>.
-L<[#18005]|https://github.com/Perl/perl5/issues/18005>.
-
-Unlike POSIX systems, creating a symbolic link on Windows requires
-either elevated privileges or Windows 10 1703 or later with Developer
-Mode enabled.
-
-stat(), including C<stat FILEHANDLE>, and lstat() now uses our own
-implementation that populates the device C<dev> and inode numbers
-C<ino> returned rather than always returning zero.  The number of
-links C<nlink> field is now always populated.
-
-L<< C<${^WIN32_SLOPPY_STAT}> |perlvar/${^WIN32_SLOPPY_STAT} >> previously
-controlled whether the C<nlink> field was populated requiring a
-separate Windows API call to fetch, since nlink and the other
-information required for stat() is now retrieved in a single API call.
-
-The C<-r> and C<-w> operators now return true for the C<STDIN>,
-C<STDOUT> and C<STDERR> handles.  Unfortunately it still won't return
-true for duplicates of those handles.
-L<[#8502]|https://github.com/Perl/perl5/issues/8502>.
-
-The times returned by stat() and lstat() are no longer incorrect
-across Daylight Savings Time adjustments.
-L<[#6080]|https://github.com/Perl/perl5/issues/6080>.
-
-C<-x> on a filehandle should now match C<-x> on the corresponding
-filename on Vista or later.
-L<[#4145]|https://github.com/Perl/perl5/issues/4145>.
-
-C<-e '"'> no longer incorrectly returns true.
-L<[#12431]|https://github.com/Perl/perl5/issues/12431>.
+XXX
 
 =back
 
 =head1 Internal Changes
 
+XXX Changes which affect the interface available to C<XS> code go here.  Other
+significant internal changes for future core maintainers should be noted as
+well.
+
+[ List each change as an =item entry ]
+
 =over 4
 
 =item *
 
-All C<SvTRUE>-ish functions now evaluate their arguments exactly once.
-In 5.32, plain L<perlapi/C<SvTRUE>> was changed to do that; now the rest
-do as well.
-
-=item *
-
-Unicode is now a first class citizen when considering the pattern /A*B/ where
-A and B are arbitrary.  The pattern matching code tries to make a tight loop
-to match the span of A's.  The logic of this was now really updated with
-support for UTF-8.
+XXX
 
 =back
 
 =head1 Selected Bug Fixes
 
+XXX Important bug fixes in the core language are summarized here.  Bug fixes in
+files in F<ext/> and F<lib/> are best summarized in L</Modules and Pragmata>.
+
+[ List each fix as an =item entry ]
+
 =over 4
 
 =item *
 
-L<semctl()|perlfunc/semctl>, L<msgctl()|perlfunc/msgctl>, and
-L<shmctl()|perlfunc/shmctl> now properly reset the UTF-8 flag on the
-C<ARG> parameter if it's modified for C<IPC_STAT> or C<GETALL>
-operations.
-
-=item *
-
-semctl(), msgctl(), and shmctl() now attempt to downgrade the C<ARG>
-parameter if it's value is being used as input to C<IPC_SET> or
-C<SETALL> calls.  A failed downgrade will thrown an exception.
-
-=item *
-
-In cases where semctl(), msgctl() or shmctl() would treat the C<ARG>
-parameter as a pointer, an undefined value no longer generates a
-warning.  In most such calls the pointer isn't used anyway and this
-allows you to supply C<undef> for a value not used by the underlying
-function.
-
-=item *
-
-L<semop()|perlfunc/semop> now downgrades the C<OPSTRING> parameter,
-L<msgsnd()|perlfunc/msgsnd> now downgrades the C<MSG> parameter and
-L<shmwrite|perlfunc/shmwrite> now downgrades the C<STRING> parameter
-to treat them as bytes.  Previously they would be left upgraded,
-providing a corrupted structure to the underlying function call.
-
-=item *
-
-L<msgrcv()|perlfunc/msgrcv> now properly resets the UTF-8 flag the
-C<VAR> parameter when it is modified.  Previusly the UTF-8 flag could
-be left on, resulting in a possibly corrupt result in C<VAR>.
+XXX
 
 =back
 
 =head1 Known Problems
 
-None
+XXX Descriptions of platform agnostic bugs we know we can't fix go here.  Any
+tests that had to be C<TODO>ed for the release would be noted here.  Unfixed
+platform specific bugs also go here.
+
+[ List each fix as an =item entry ]
+
+=over 4
+
+=item *
+
+XXX
+
+=back
 
 =head1 Errata From Previous Releases
 
-None
+=over 4
+
+=item *
+
+XXX Add anything here that we forgot to add, or were mistaken about, in
+the perldelta of a previous release.
+
+=back
+
+=head1 Obituary
+
+XXX If any significant core contributor or member of the CPAN community has
+died, add a short obituary here.
 
 =head1 Acknowledgements
 
-Perl 5.33.5 represents approximately 4 weeks of development since Perl
-5.33.4 and contains approximately 22,000 lines of changes across 370 files
-from 27 authors.
+XXX Generate this with:
 
-Excluding auto-generated files, documentation and release tools, there were
-approximately 15,000 lines of changes to 220 .pm, .t, .c and .h files.
-
-Perl continues to flourish into its fourth decade thanks to a vibrant
-community of users and developers. The following people are known to have
-contributed the improvements that became Perl 5.33.5:
-
-Branislav Zahradník, Chris 'BinGOs' Williams, Dan Book, Dan Kogai, David
-Cantrell, David Mitchell, Graham Knop, H.Merijn Brand, Jae Bradley, James E
-Keenan, Jason McIntosh, jkahrman, John Karr, Karen Etheridge, Karl
-Williamson, Leon Timmermans, Max Maischein, Paul Evans, Sawyer X, Sevan
-Janiyan, Shlomi Fish, Steve Hay, TAKAI Kousuke, Thibault Duponchelle, Tomasz
-Konojacki, Tom Hukins, Tony Cook.
-
-The list above is almost certainly incomplete as it is automatically
-generated from version control history. In particular, it does not include
-the names of the (very much appreciated) contributors who reported issues to
-the Perl bug tracker.
-
-Many of the changes included in this version originated in the CPAN modules
-included in Perl's core. We're grateful to the entire CPAN community for
-helping Perl to flourish.
-
-For a more complete list of all of Perl's historical contributors, please
-see the F<AUTHORS> file in the Perl source distribution.
+  perl Porting/acknowledgements.pl v5.33.5..HEAD
 
 =head1 Reporting Bugs
 
